--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">SampleChat</string>
+    <string name="title_home">Home</string>
+    <string name="title_settings">Settings</string>
+
+    <string name="menu_item_1">Home</string>
+    <string name="menu_item_2">Chat</string>
+    <string name="menu_item_3">Settings</string>
+
 </resources>
