--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="menu_item_2">Chat</string>
     <string name="menu_item_3">Settings</string>
 
+    <string name="salt">C~kW]cq76(a?m[UbJ)drw+Wh6>W[3Wsj</string>
+
 </resources>
