--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,14 +1,14 @@
 <resources>
     <string name="app_name">SampleChat</string>
-    <string name="title_home">Главная</string>
-    <string name="title_settings">Настройки</string>
+    <string name="title_home">Home</string>
+    <string name="title_settings">Settings</string>
 
     <string name="menu_item_1">Home</string>
     <string name="menu_item_2">Chat</string>
     <string name="menu_item_3">Settings</string>
 
-<!--    <string name="urlSocketHost">https://presale.craft-talk.com</string>-->
-<!--    <string name="urlSocketNameSpace">/webchat_presale</string>-->
+    <!--    <string name="urlSocketHost">https://presale.craft-talk.com</string>-->
+    <!--    <string name="urlSocketNameSpace">/webchat_presale</string>-->
     <string name="urlSocketHost">https://rshb-test2-c.crafttalk.ru</string>
     <string name="urlSocketNameSpace">/webchat_mobile</string>
 
