--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,10 @@
     <string name="urlSocketHost">https://rshb-test2-c.crafttalk.ru</string>
     <string name="urlSocketNameSpace">/webchat_mobile</string>
 
-    <string name="urlUploadHost">https://presale.craft-talk.com/</string>
-    <string name="urlUploadNameSpace">webchat_presale</string>
+<!--    <string name="urlUploadHost">https://presale.craft-talk.com/</string>-->
+<!--    <string name="urlUploadNameSpace">webchat_presale</string>-->
+    <string name="urlUploadHost">https://rshb-test2-c.crafttalk.ru/</string>
+    <string name="urlUploadNameSpace">webchat_mobile</string>
 
     <string name="salt">C~kW]cq76(a?m[UbJ)drw+Wh6>W[3Wsj</string>
     <string name="default_notification_channel_id">0</string>
