Added processing timeout, hide status. Added warning screen. Added customization of progress bars.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -7,15 +7,10 @@
     <string name="menu_item_2">Chat</string>
     <string name="menu_item_3">Settings</string>
 
-<!--    <string name="urlSocketHost">https://presale.craft-talk.com</string>-->
-<!--    <string name="urlSocketNameSpace">/webchat_presale</string>-->
-    <string name="urlSocketHost">https://rshb-test2-c.crafttalk.ru</string>
-    <string name="urlSocketNameSpace">/webchat_mobile</string>
-
-<!--    <string name="urlUploadHost">https://presale.craft-talk.com/</string>-->
-<!--    <string name="urlUploadNameSpace">webchat_presale</string>-->
-    <string name="urlUploadHost">https://rshb-test2-c.crafttalk.ru/</string>
-    <string name="urlUploadNameSpace">webchat_mobile</string>
+    <string name="urlSocketHost">https://presale.craft-talk.com</string>
+    <string name="urlSocketNameSpace">/webchat_presale</string>
+    <string name="urlUploadHost">https://presale.craft-talk.com/</string>
+    <string name="urlUploadNameSpace">webchat_presale</string>
 
     <string name="salt">C~kW]cq76(a?m[UbJ)drw+Wh6>W[3Wsj</string>
     <string name="default_notification_channel_id">0</string>
