Added custom warning snackbar and handler codes

--- a/chat/src/main/res/values-en/strings.xml
+++ b/chat/src/main/res/values-en/strings.xml
@@ -19,6 +19,12 @@
     <string name="warning_title">Error has occurred</string>
     <string name="warning_reload">Please reload the page or try again later</string>
 
+    <!--    Warning snackbar-->
+    <string name="warning_snackbar_not_support_type_title">Unable to load document</string>
+    <string name="warning_snackbar_not_support_type_description">The download file is not allowed to be sent</string>
+    <string name="warning_snackbar_large_title">Unable to load document</string>
+    <string name="warning_snackbar_large_description">The download file is too large</string>
+
     <!--    Bottom sheet file viewer-->
     <string name="bottom_sheet_file_viewer_image_from_gallery">Image</string>
     <string name="bottom_sheet_file_viewer_image_from_camera">Camera</string>
