--- a/chat/src/main/res/values-en/strings.xml
+++ b/chat/src/main/res/values-en/strings.xml
@@ -45,10 +45,16 @@
     <!--    FeedBack-->
     <string name="feedback_title">The dialogue is over. Rate the quality of service.</string>
 
+    <!--    Download file-->
+    <string name="download_file_success">File downloaded successfully</string>
+    <string name="download_file_fail">File could not be downloaded</string>
+    <string name="download">Download</string>
+
     <string name="string_chooser_open_file_action_view">Select an application to view this file:</string>
 
     <string name="requested_permission_storage">You do not have permission to access resources!</string>
     <string name="requested_permission_camera">You do not have permission to access the camera!</string>
+    <string name="requested_permission_download">You don\'t have permission to download files!</string>
 
     <!--    Phone formats-->
     <string name="russian_phone_format">+7 ([000]) [000]-[00]-[00]</string>
