--- a/chat/src/main/res/values/strings.xml
+++ b/chat/src/main/res/values/strings.xml
@@ -45,10 +45,16 @@
     <!--    FeedBack-->
     <string name="feedback_title">Диалог завершен. Оцените качество обслуживания.</string>
 
+    <!--    Download file-->
+    <string name="download_file_success">Файл успешно скачен</string>
+    <string name="download_file_fail">Файл не удалось скачать</string>
+    <string name="download">Загрузить</string>
+
     <string name="string_chooser_open_file_action_view">Выберите приложение для просмотра этого файла:</string>
 
     <string name="requested_permission_storage">У вас нет разрешения на доступ к ресурсам!</string>
     <string name="requested_permission_camera">У вас нет разрешения на доступ к камере!</string>
+    <string name="requested_permission_download">У вас нет разрешения на скачивание файлов!</string>
 
     <!--    Phone formats-->
     <string name="russian_phone_format">+7 ([000]) [000]-[00]-[00]</string>
