--- a/chat/src/main/res/values-en/strings.xml
+++ b/chat/src/main/res/values-en/strings.xml
@@ -45,6 +45,9 @@
     <!--    FeedBack-->
     <string name="feedback_title">The dialogue is over. Rate the quality of service.</string>
 
+    <!--    History-->
+    <string name="upload_history">Download history</string>
+
     <!--    Download file-->
     <string name="download_file_success">File downloaded successfully</string>
     <string name="download_file_fail">File could not be downloaded</string>
