--- a/chat/src/main/res/values-en/strings.xml
+++ b/chat/src/main/res/values-en/strings.xml
@@ -62,4 +62,13 @@
     <!--    Phone formats-->
     <string name="russian_phone_format">+7 ([000]) [000]-[00]-[00]</string>
 
+    <!--    Patterns phone-->
+    <string-array name="phone_patterns">
+        <item>[0-9]{11}</item>
+        <item>\\+[0-9]{11}</item>
+        <item>\\+7 \\([0-9]{3}\\) [0-9]{3}-[0-9]{2}-[0-9]{2}</item>
+        <item>\\+7 [0-9]{3} [0-9]{3}-[0-9]{2}-[0-9]{2}</item>
+        <item>[0-9] [0-9]{3} [0-9]{3}-[0-9]{2}-[0-9]{2}</item>
+    </string-array>
+
 </resources>
