--- a/chat/src/main/res/values/strings.xml
+++ b/chat/src/main/res/values/strings.xml
@@ -58,13 +58,17 @@
     <string name="com_crafttalk_chat_requested_permission_camera">У вас нет разрешения на доступ к камере!</string>
     <string name="com_crafttalk_chat_requested_permission_download">У вас нет разрешения на скачивание файлов!</string>
 
+    <!--    Language-->
+    <string name="com_crafttalk_chat_default_language">ru</string>
+    <string name="com_crafttalk_chat_default_country">RU</string>
+
     <!--    Phone formats-->
     <string name="com_crafttalk_chat_russian_phone_format">+7 ([000]) [000]-[00]-[00]</string>
 
     <!--    Patterns phone-->
     <string-array name="com_crafttalk_chat_phone_patterns">
-        <item>[0-9]{11}</item>
         <item>\\+[0-9]{11}</item>
+        <item>[0-9]{11}</item>
         <item>\\+7 \\([0-9]{3}\\) [0-9]{3}-[0-9]{2}-[0-9]{2}</item>
         <item>\\+7 [0-9]{3} [0-9]{3}-[0-9]{2}-[0-9]{2}</item>
         <item>[0-9] [0-9]{3} [0-9]{3}-[0-9]{2}-[0-9]{2}</item>
