--- a/chat/src/main/res/values/strings.xml
+++ b/chat/src/main/res/values/strings.xml
@@ -67,9 +67,14 @@
 
     <!--    Patterns phone-->
     <string-array name="com_crafttalk_chat_phone_patterns">
+        <item>\\+[0-9]{13}</item>
+        <item>\\+[0-9]{12}</item>
         <item>\\+[0-9]{11}</item>
+        <item>\\+[0-9]{9}</item>
         <item>[0-9]{11}</item>
         <item>\\+7 \\([0-9]{3}\\) [0-9]{3}-[0-9]{2}-[0-9]{2}</item>
+        <item>\\+7\\([0-9]{3}\\)-[0-9]{3}-[0-9]{2}-[0-9]{2}</item>
+        <item>\\+7 [0-9]{3} [0-9]{3} [0-9]{2} [0-9]{2}</item>
         <item>\\+7 [0-9]{3} [0-9]{3}-[0-9]{2}-[0-9]{2}</item>
         <item>[0-9] [0-9]{3} [0-9]{3}-[0-9]{2}-[0-9]{2}</item>
     </string-array>
