--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="salt">C~kW]cq76(a?m[UbJ)drw+Wh6>W[3Wsj</string>
     <string name="default_notification_channel_id">0</string>
     <string name="internet_connection_warning">Нет доступа к сети…</string>
+    <string name="synchronization">Синхронизация</string>
 
     <string name="chat_file_provider_authorities">com.crafttalk.chat.fileprovider</string>
 
