--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,12 @@
     <string name="menu_item_2">Chat</string>
     <string name="menu_item_3">Settings</string>
 
-<!--    <string name="urlChatHost">https://presale.craft-talk.com</string>-->
+<!--    <string name="urlChatScheme">https</string>-->
+<!--    <string name="urlChatHost">presale.craft-talk.com</string>-->
 <!--    <string name="urlChatNameSpace">webchat_presale</string>-->
 
-    <string name="urlChatHost">https://release.craft-talk.com</string>
+    <string name="urlChatScheme">https</string>
+    <string name="urlChatHost">release.craft-talk.com</string>
     <string name="urlChatNameSpace">webchat_test</string>
 
 
