--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,8 +13,7 @@
 
     <string name="urlChatScheme">https</string>
     <string name="urlChatHost">release.craft-talk.com</string>
-    <string name="urlChatNameSpace">webchat_test</string>
-
+    <string name="urlChatNameSpace">webchat_ASDK</string>
 
     <string name="salt">C~kW]cq76(a?m[UbJ)drw+Wh6>W[3Wsj</string>
     <string name="default_notification_channel_id">0</string>
