--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,8 @@
     <string name="urlChatNameSpace">webchat_ASDK</string>
 
     <string name="webUrlChatScheme">https</string>
-    <string name="webUrlChatHost">cloud-dev.craft-talk.ru</string>
-    <string name="webUrlChatNameSpace">channel_166f69e</string>
+    <string name="webUrlChatHost">release.craft-talk.com</string>
+    <string name="webUrlChatNameSpace">wwebchat_test</string>
 
     <string name="salt">C~kW]cq76(a?m[UbJ)drw+Wh6>W[3Wsj</string>
     <string name="default_notification_channel_id">0</string>
