Исправлен вылет приложения на 14 версии андроид, добавлена функция блокировки чата

--- a/chat/src/main/res/values-en/strings.xml
+++ b/chat/src/main/res/values-en/strings.xml
@@ -14,6 +14,7 @@
     <string name="com_crafttalk_chat_name_company">by CraftTalk</string>
     <string name="com_crafttalk_chat_state_action_operator">Operator write message…</string>
     <string name="com_crafttalk_chat_entry_field_hint">Enter your message…</string>
+    <string name="com_crafttalk_chat_entry_field_hint_chat_off">Сhat unavailable</string>
 
     <!--    Message-->
     <string name="com_crafttalk_chat_message_join">Operator %s joined the dialogue</string>
