--- a/chat/src/main/res/values/strings.xml
+++ b/chat/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="com_crafttalk_chat_name_company">автор CraftTalk</string>
     <string name="com_crafttalk_chat_state_action_operator">Оператор печатает сообщение…</string>
     <string name="com_crafttalk_chat_entry_field_hint">Введите сообщение…</string>
+    <string name="com_crafttalk_chat_entry_field_hint_chat_off">Чат недоступен…</string>
 
     <!--    Message-->
     <string name="com_crafttalk_chat_message_join">Оператор %s подключился к диалогу</string>
