--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,11 +16,11 @@
     <string name="chat_bottom_sheet_file_viewer_document_from_gallery">Документ</string>
 
     <string name="urlChatScheme">https</string>
-    <string name="urlChatHost">cloud-dev-external.craft-talk.com</string>
-    <string name="urlChatNameSpace">channel_ce93c1</string>
+    <string name="urlChatHost">cloud-stage.craft-talk.com</string>
+    <string name="urlChatNameSpace">channel_296596d</string>
 
     <string name="webUrlChatScheme">https</string>
-    <string name="webUrlChatHost">cloud-dev-external.craft-talk.com</string>
+    <string name="webUrlChatHost">cloud-stage.craft-talk.com</string>
     <string name="webUrlChatNameSpace">channel_296596d</string>
 
     <string name="salt">C~kW]cq76(a?m[UbJ)drw+Wh6>W[3Wsj</string>
