--- a/chat/src/main/res/values/strings.xml
+++ b/chat/src/main/res/values/strings.xml
@@ -97,4 +97,6 @@
         <item>[0-9] [0-9]{3} [0-9]{3}-[0-9]{2}-[0-9]{2}</item>
     </string-array>
 
+    <string name="finish_dialog">Диалог завершён</string>
+
 </resources>
